k8s/manifests/ml-api/ml-api.yaml
# Copyright 2025, Battelle Energy Alliance, LLC, ALL RIGHTS RESERVED

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-api
  labels:
    app: ml-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ml-api
  template:
    metadata:
      labels:
        app: ml-api
    spec:
      containers:
        - image: 869935092417.dkr.ecr.us-west-1.amazonaws.com/inl-image-registry/ml_api:latest
          imagePullPolicy: Always
          name: ml-api
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: inl-registry-creds-ml-api

---
apiVersion: v1
kind: Service
metadata:
  name: ml-api
spec:
  selector:
    app: ml-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-api
spec:
  rules:
    - host: ml-api.caiser.ornlkdi.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ml-api
                port:
                  number: 80
  tls:
    - hosts:
        - ml-api.caiser.ornlkdi.org
      secretName: tls
